--- a/genindex/index.html
+++ b/genindex/index.html
@@ -79,7 +79,8 @@
     <div class="footer">
         Copyright 2012, Dan Foreman-Mackey. Released under
         <a href="http://creativecommons.org/licenses/by/3.0/deed.en_US">CC Attribution 3.0 License</a>.<br>
-        Generated using <a href="http://sphinx-doc.org/">Sphinx</a> &amp;
+        This documentation was lovingly built using
+        <a href="http://sphinx-doc.org/">Sphinx</a> &amp;
         <a href="http://dan.iel.fm/daftish">a Daftish theme</a>.
     </div>
 
