--- a/daftish/layout.html
+++ b/daftish/layout.html
@@ -19,7 +19,7 @@
 
 <div class="main-logo">
     <h1><a href="{{ pathto(master_doc) }}">{{ project }}</a></h1>
-    <h2>{{ theme_tagline }}</h2>
+    <h2>{{ title }}</h2>
 </div>
 
 {{ super() }}
